# docs/swagger.json
@@ -11,7 +11,7 @@
     "paths": {
         "/auth/signin": {
             "post": {
-                "description": "returns user and set session-cookie",
+                "description": "returns user with jwt token",
                 "consumes": [
                     "application/json"
                 ],
@@ -37,7 +37,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.User"
+                            "$ref": "#/definitions/models.Token"
                         }
                     }
                 }
@@ -79,6 +79,14 @@
         }
     },
     "definitions": {
+        "models.Token": {
+            "type": "object",
+            "properties": {
+                "token": {
+                    "type": "string"
+                }
+            }
+        },
         "models.User": {
             "type": "object",
             "properties": {
@@ -89,6 +97,13 @@
                     "type": "string"
                 }
             }
+        }
+    },
+    "securityDefinitions": {
+        "ApiKeyAuth": {
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     }
 }
